<resources>
    <string name="app_name">eCarculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_maps">Map</string>
    <string name="Registrieren">Registrieren</string>
    <string name="PasswortReset">Passwort zurücksetzen</string>


    <string name="agb">AGB und Datenschutzrichtlinien</string>

    <string name="camera">Kamera</string>
    <string name="cancel">Abbrechen</string>
    <string name="change">Ändern</string>
    <string name="changeEmail">E-Mail-Adresse ändern</string>
    <string name="changeName">Benutzernamen ändern</string>
    <string name="changePassword">Passwort ändern</string>
    <string name="confirmChange">Änderung bestätigen</string>
    <string name="closeAcc">Konto schließen</string>

    <string name="delete">Löschen</string>
    <string name="deleteImage">Bild entfernen</string>
    <string name="deleteAcc">Account löschen</string>
    <string name="deleteAccDescription">Bitte geben Sie ihr Passwort ein und bestätigen Sie die
        Löschung Ihres Kontos.</string>
    <string name="description">Bitte den Teil markieren, der entfernt werden soll.</string>
    <string name="done">Fertig</string>

    <string name="enterPassword">Gib dein Passwort ein.</string>

    <string name="facebook_app_id">1707068016267697</string>
    <string name="fb_login_protocol_scheme">fb1707068016267697</string>
    <string name="FBLogin">Weiter mit Facebook</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="forgotPassword">Passwort vergessen?</string>

    <string name="galery">Galerie</string>
    <string name="GoogleLogin">Weiter mit Google</string>
    <string name="google_status_fmt">Google User: %s</string>

    <string name="imgLogo">Logo Image</string>

    <string name="linkFB">Facebook - Verbinden</string>
    <string name="linkGoogle">Google+ - Verbinden</string>
    <string name="loading">Loading…</string>
    <string name="logout">Logout</string>

    <string name="mail">E-Mail-Adresse</string>

    <string name="name">Name</string>
    <string name="next">Weiter</string>

    <string name="password">Passwort</string>
    <string name="passwordRequirement">Das Passwort muss mindestens 6 Zeichen umfassen.</string>
    <string name="profile">Profil</string>
    <string name="profileImage">Profilbild</string>

    <string name="resetPassword">Passwort zurücksetzen</string>

    <string name="settings">Settings</string>
    <string name="showPassword">Passwort anzeigen</string>
    <string name="signIn">Anmelden</string>
    <string name="signUp">Registrieren</string>
    <string name="socialNetwork">Soziale Netzwerke</string>
    <string name="anleitung">\n\n1. Über das Navigationsmenü(Eigenes Fahrzeug)\nein Benzinfahrzeug eintragen\n\n
2. Eine Strecke über die LiveAuswertung, oder "'Strecke Aufnehmen'" aufnehmen\n\n
3. Die aufgenommenen Strecken können unter Auswertung betrachtet werden. (Kosten, CO2-Einsparung, Wöchentliche Auswertung)</string>
    <string name="activity_view_string">activity_view_string</string>
    <string name="willkommen">\nWillkommen!</string>
    <string name="unlinkFB">Facebook - Trennen</string>
    <string name="unlinkGoogle">Google+ - Trennen</string>
    <string name="username">Benutzername</string>

    <string name="verwerfen">Verwerfen</string>

    <string name="welcome">Willkommen bei ECar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>