<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_email_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.example.denis.ecar.login.SignUpActivity">

    <ProgressBar
        android:id="@+id/sign_up_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textSize="20sp"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvPasswordHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordRequirement"
            android:textColor="@color/colorTextAccent" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"/>
        </android.support.design.widget.TextInputLayout>


        <CheckBox
            android:id="@+id/chckBxShowPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/showPassword" />


        <Button
            android:id="@+id/bttnSignUp"
            style="@style/bttnStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:text="@string/signUp" />

    </LinearLayout>
</RelativeLayout>